@@ -3,6 +3,8 @@
    * You can now create and end links.
    * Underline and strikethrough now work.
    * Pulldowns for search suggestions, importing, and exporting show up.
+ * Fixed a bug that broke that Luminotes Desktop product download page if
+   PayPal took too long to notify Luminotes of the purchase.
 
 1.5.2: October 1, 2008
  * Leading/trailing spaces in note titles are now ignored when making links
